cart-service/cart-envoy-config.yaml
stats_sinks:
-
  name: "envoy.statsd"
  config:
    tcp_cluster_name: "statsd-exporter"
    prefix: cart-service
admin:
  access_log_path: "/tmp/admin_access.log"
  address:
    socket_address:
      address: "127.0.0.1"
      port_value: 9901
static_resources:
  listeners:

  -
    name: "cart-service-svc-http-listener"
    address:
      socket_address:
        address: "0.0.0.0"
        port_value: 80
    filter_chains:
    -
      filters:
      -
        name: "envoy.http_connection_manager"
        config:
          access_log:
          - name: envoy.file_access_log
            config:
              path: /dev/stdout
              format: "[ACCESS_LOG][%START_TIME%] \"%REQ(:METHOD)% %REQ(X-ENVOY-ORIGINAL-PATH?:PATH)% %PROTOCOL%\" %RESPONSE_CODE% %RESPONSE_FLAGS% %BYTES_RECEIVED% %BYTES_SENT% %DURATION% %RESP(X-ENVOY-UPSTREAM-SERVICE-TIME)% \"%REQ(X-FORWARDED-FOR)%\" \"%REQ(USER-AGENT)%\" \"%REQ(X-REQUEST-ID)%\" \"%REQ(:AUTHORITY)%\" \"%UPSTREAM_HOST%\" \"%DOWNSTREAM_REMOTE_ADDRESS_WITHOUT_PORT%\"\n"
          stat_prefix: "ingress_8786"
          codec_type: "AUTO"
          tracing:
            operation_name: "ingress"
          route_config:
            name: "cart-service-svc-http-route"
            virtual_hosts:
            -
              name: "cart-service-svc-http-route"
              domains:
              - "*"
              routes:
              -
                match:
                  prefix: "/cart"
                route:
                  cluster: "service_cart"
                decorator:
                  operation: checkAvailability
              - match:
                  prefix: "/user"
                route:
                  cluster: "service_user"
                decorator:
                  operation: checkAvailability
          http_filters:
          -
            name: "envoy.router"
  -
    name: "user-service-svc-http-listener"
    address:
      socket_address:
        address: "0.0.0.0"
        port_value: 9788
    filter_chains:
    -
      filters:
      -
        name: "envoy.http_connection_manager"
        config:
          access_log:
          - name: envoy.file_access_log
            config:
              path: /dev/stdout
              format: "[ACCESS_LOG][%START_TIME%] \"%REQ(:METHOD)% %REQ(X-ENVOY-ORIGINAL-PATH?:PATH)% %PROTOCOL%\" %RESPONSE_CODE% %RESPONSE_FLAGS% %BYTES_RECEIVED% %BYTES_SENT% %DURATION% %RESP(X-ENVOY-UPSTREAM-SERVICE-TIME)% \"%REQ(X-FORWARDED-FOR)%\" \"%REQ(USER-AGENT)%\" \"%REQ(X-REQUEST-ID)%\" \"%REQ(:AUTHORITY)%\" \"%UPSTREAM_HOST%\" \"%DOWNSTREAM_REMOTE_ADDRESS_WITHOUT_PORT%\"\n"
          stat_prefix: "egress_8788"
          codec_type: "AUTO"
          tracing:
            operation_name: "egress"
          route_config:
            name: "user-service-svc-http-route"
            virtual_hosts:
            -
              name: "user-service-svc-http-route"
              domains:
              - "*"
              routes:
              -
                match:
                  prefix: "/user"
                route:
                  cluster: "service_user"
          http_filters:
          -
            name: "envoy.router"
  clusters:
  -
    name: "statsd-exporter"
    connect_timeout: "0.25s"
    type: "strict_dns"
    lb_policy: "ROUND_ROBIN"
    hosts:
    -
      socket_address:
        address: "statsd_exporter"
        port_value: 9125
  -
    name: "service_cart"
    connect_timeout: "0.25s"
    type: "strict_dns"
    lb_policy: "ROUND_ROBIN"
    hosts:
    -
      socket_address:
        address: "service_cart"
        port_value: 5222
  -
    name: "service_user"
    connect_timeout: "0.25s"
    type: "strict_dns"
    lb_policy: "ROUND_ROBIN"
    hosts:
    -
      socket_address:
        address: "service_user_envoy"
        port_value: 80
  -
    name: "zipkin"
    connect_timeout: 1s
    type: strict_dns
    lb_policy: "ROUND_ROBIN"
    hosts:
    - socket_address:
        address: "zipkin"
        port_value: 9411

tracing:
  http:
    name: "envoy.zipkin"
    config:
      collector_cluster: "zipkin"
      collector_endpoint: "/api/v1/spans"
#    typed_config:
#      "@type": type.googleapis.com/envoy.config.trace.v2.ZipkinConfig
#      collector_cluster: "zipkin"
#      collector_endpoint: "/api/v1/spans"
